# stylish-haskell-wrapper

./: .gitignore  LICENSE  README.md  StylishHaskell.hs  stylish-haskell-wrapper.cabal
