name:               stylish-haskell-wrapper
version:            0.1.0.0
synopsis:           stylish haskell wrapper
description:        stylish haskell wrapper
license:            BSD3
license-file:       LICENSE
author:             belliture <belliture@gmail.com>
maintainer:         belliture <belliture@gmail.com>
copyright:          (c) 2015 belliture
category:           Language
build-type:         Simple
cabal-version:      >= 1.10

executable stylish-haskell-wrapper
  main-is:            StylishHaskell.hs
  ghc-options:        -O2 -Wall
  build-depends:      base
                    , process
  default-language:   Haskell2010
